Adjust JVM requirements